--- a/examplecourse.tex
+++ b/examplecourse.tex
@@ -4,7 +4,7 @@
       
 \title{An example course}%% This is the Name of your course, personalize it!
       
-
+\author{Tien Chih Ph.D.}
       
 \begin{document}
       
@@ -21,6 +21,7 @@ This is a Ximera activity explaining how to get started with Ximera for course i
 %% Here we have a listing of the activities.
       
 \activity{firstactivity/FirstActivity.tex}
+\activity{Best/Best.tex}
       
 
       
