--- a/Best/Best.tex
+++ b/Best/Best.tex
@@ -55,9 +55,8 @@ $3\times 2 = \answer{6}$
 
  \begin{onlineOnly}
    Check out this graph $y=f(x)$:
-   \[
-   \graph[xmin=-10,xmax=10,ymin=0,ymax=30]{y=x+4\left\{x<1\right\},y=x^2+2x+2\left\{1\leq x<3\right\},y=6x-1\left\{3 \leq x\right\}} 
-   \]
+   $$\graph[xmin=-1,xmax=10, panel]{f(x)=x^{.5},m=(f(a+h)-f(a))/h, (a, f(a)), (a+h, f(a)+mh), y=m(x-a)+f(a), a=1, h=0.5}$$
+
  \end{onlineOnly}
 
 
