--- a/Best/Best.tex
+++ b/Best/Best.tex
@@ -55,7 +55,7 @@ $3\times 2 = \answer{6}$
 
  \begin{onlineOnly}
    Check out this graph $y=f(x)$:
-   $$\graph[xmin=-1,xmax=10, panel]{f(x)=x^{.5},m=(f(a+h)-f(a))/h, (a, f(a)), (a+h, f(a)+mh), y=m(x-a)+f(a), a=1, h=0.5}$$
+   $$\graph[xmin=-1,xmax=10, panel]{f(x)=x^{.5},m=(f(a+h)-f(a))/h, {(a, f(a))}, {(a+h, f(a)+mh)}, y=m(x-a)+f(a), a=1, h=0.5}$$
 
  \end{onlineOnly}
 
