--- a/Best/Best.tex
+++ b/Best/Best.tex
@@ -55,7 +55,7 @@ $3\times 2 = \answer{6}$
 
  \begin{onlineOnly}
    Check out this graph $y=f(x)$:
-   $$\graph[xmin=-1,xmax=10, panel]{f(x)=x^{.5},m=(f(a+h)-f(a))/h,(a\, f(a)), (a+h\, f(a)+mh), y=m(x-a)+f(a), a=1, h=0.5}$$
+   $$\graph[panel]{f(x)=x^2-3x,a=0,b=6,n=1, c=0, I=\sum_{i=0}^{n-1}f(s(i))\cdot w, \int_a^b f(x) dx, y=f(x), x=a, x=b, f(s_x(x))\leq y \leq 0\{a\leq x \leq b\},0\leq y\leq f(s_x(x))\{a\leq x\leq b\}, w=(b-a)/n, s(m)=a+w(m+c), n_x(x)=floor((x-a)/w),s_x(x)=\{a\leq x\leq b: s(n_x(x))\}}$$
 
  \end{onlineOnly}
 
