--- a/Best/Best.tex
+++ b/Best/Best.tex
@@ -55,7 +55,7 @@ $3\times 2 = \answer{6}$
 
  \begin{onlineOnly}
    Check out this graph $y=f(x)$:
-   $$\graph[panel]{f(x)=x^2-3x,a=0,b=6,n=1, c=0, I=\sum_{i=0}^{n-1}f(s(i))\cdot w, \int_a^b f(x) dx, y=f(x), x=a, x=b, f\left(s_x\left(x\right)\right)\le y\le 0\left\{a\le x\le b\right\},0\le y\le f\left(s_x\left(x\right)\right)\left\{a\le x\le b\right\}, w=(b-a)/n, s(m)=a+w(m+c), n_x(x)=floor((x-a)/w),s_x(x)=\{a\leq x\leq b: s(n_x(x))\}}$$
+   $$graph[panel]{f\left(x\right)=x^2-3x, a=0,b=6,n=1,c=0, I=\sum _{i=0}^{n\ -\ 1}f\left(s\left(i\right)\right)\cdot w, \int _a^bf\left(x\right)dx, f\left(s_x\left(x\right)\right)\le y\le 0\left\{a\le x\le b\right\}, 0\le y\le f\left(s_x\left(x\right)\right)\left\{a\le x\le b\right\}, w=\frac{b-a}{n}, s\left(m\right)=a+w\left(m+c\right), n_x\left(x\right)=\operatorname{floor}\left(\frac{x-a}{w}\right), s_x\left(x\right)=\left\{a\le x\le b:\ s\left(n_x\left(x\right)\right)\right\}}$$
 
  \end{onlineOnly}
 
