--- a/examplecourse.tex
+++ b/examplecourse.tex
@@ -1,17 +1,16 @@
 \documentclass{xourse}
       
+  \input{preamble.tex}
 
       
-\title{An example course}%% This is the Name of your course, personalize it!
+\title{Example Course}%% This is the Name of your course, personalize it!
       
-\author{Tien Chih Ph.D.}
+
       
 \begin{document}
       
 \begin{abstract} %% This describes your course
-      
-This is a Ximera activity explaining how to get started with Ximera for course instructors.
-      
+This is a sampler course meant to highlight potential applications of Ximera to lower-level undergraduate courses.      
 \end{abstract}
       
 \maketitle
@@ -19,10 +18,17 @@ This is a Ximera activity explaining how to get started with Ximera for course i
 
       
 %% Here we have a listing of the activities.
+
+\activity{Introduction/Introduction}
       
-\activity{firstactivity/FirstActivity.tex}
-\activity{Best/Best.tex}
-      
+%\activity{MAT101/MAT101activity}
+%\activity{MAT151/MAT151activity}
+%\activity{MAT200/MAT200activity}
+%\activity{MAT211/MAT211activity}
+%\activity{MAT212/MAT212activity}
+%\activity{MAT221/MAT221activity}
+
+%\activity{Conclusion/Conclusion}      
 
       
 \end{document}
