--- a/examplecourse.tex
+++ b/examplecourse.tex
@@ -19,8 +19,10 @@ This is a sampler course meant to highlight potential applications of Ximera to 
       
 %% Here we have a listing of the activities.
 
-\activity{Introduction/Introduction}
-      
+%\activity{Introduction/Introduction}
+ 
+ \activity{Best/Best}
+ 
 %\activity{MAT101/MAT101activity}
 %\activity{MAT151/MAT151activity}
 %\activity{MAT200/MAT200activity}
