dear god plz work

--- a/examplecourse.tex
+++ b/examplecourse.tex
@@ -1,6 +1,6 @@
 \documentclass{xourse}
       
-  \input{preamble.tex}
+%  \input{preamble.tex}
 
       
 \title{Example Course}%% This is the Name of your course, personalize it!
