--- a/examplecourse.tex
+++ b/examplecourse.tex
@@ -21,7 +21,7 @@ This is a sampler course meant to highlight potential applications of Ximera to 
 
 %\activity{Introduction/Introduction}
  
- \activity{Best/Best}
+ \activity{Best/Best.tex}
  
 %\activity{MAT101/MAT101activity}
 %\activity{MAT151/MAT151activity}
